Create Project Components #1

--- a/src/styles/components/App.styl
+++ b/src/styles/components/App.styl
@@ -1,2 +1,26 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
+*
+  margin: 0
+  padding: 0
+  box-sizing: border-box
+
 body
-  background-color blue
+
+  color: black
+  font-family: Roboto
+
+.general-container
+  display:flex
+  flex-direction: column
+  justify-content: space-between
+  height: 100vh
+  
+
+.app-item
+  display: flex
+  
+
+
+
+  
