--- a/src/styles/components/About.styl
+++ b/src/styles/components/About.styl
@@ -1,21 +1,18 @@
-.about-container
+.About-container
   display: flex
   flex-diection:row
   padding: 1.5rem
   gap: 2rem
-  
+  font-size:1rem
 
-.Header-title
-  width:100%  
-
-.about-img
-  width: 8rem
-  height: 8rem
+.About-img
+  width: 10rem
+  height: 10rem
   border-radius:5px
 
-.header-info
+.About-info
   display: flex
-  gap: 1rem
+  gap: 1.5rem
 
 .center
   display: flex
