--- a/src/styles/components/Interest.styl
+++ b/src/styles/components/Interest.styl
@@ -4,8 +4,35 @@
   flex-direction: column
   justify-content: left
   padding: 1.5rem
+  margin-left:1rem
+  margin-top:1rem
+  border-radius: 8px
+  background-color: rgba(238, 238, 238,0.5)
 
 .Interest-items
   display: flex
-  flex-direction: column
+  flex-direction: row
+  flex-wrap: wrap
   gap:0.5rem
+  padding: 0.5rem
+
+  
+.Interest-title
+  color: white
+  padding:0.5rem 0.8rem
+  background-color: rgb(15, 52, 96, 0.9)
+  width: fit-content
+  border-radius: 8px
+
+.Interest-item
+  display: flex
+  flex-direction: row
+  gap: 1rem
+  padding: 0.5rem
+
+.Interest-item-title
+  color: white
+  padding:0.5rem 0.8rem
+  background-color: rgb(83, 52, 131, 0.9)
+  width: fit-content
+  border-radius: 8px
