--- a/src/styles/components/Profile.styl
+++ b/src/styles/components/Profile.styl
@@ -1,9 +1,19 @@
 .Profile-container
   padding: 1.5rem
-    
+  margin:1rem
+  background-color: rgba(238, 238, 238,0.5)
+  border-radius: 8px
+  
 
 .Profile-desc
   color: black
+  margin-top: 1rem
+  
+   
 
 .Profile-title
-  color: black
+  color: white
+  padding:0.5rem 0.8rem
+  background-color: rgb(15, 52, 96, 0.9)
+  width: fit-content
+  border-radius: 8px
