--- a/src/styles/components/Skills.styl
+++ b/src/styles/components/Skills.styl
@@ -1,18 +1,46 @@
 .Skills-container
-  flex:1
+  flex: 1
   display: flex
   flex-direction: column
   justify-content: left
-  padding: 1.5rem
+  padding: 1rem
+  margin-left:1rem
+  margin-right:1rem
+  flex-wrap: wrap
+  background-color: white
+  border-radius: 8px
+  background-color: rgba(238, 238, 238,0.5)
+  
+
+
+
+
 
 .Skills-title
-  color: black
+  color: white
+  padding:0.5rem 0.8rem
+  background-color: rgb(15, 52, 96, 0.9)
+  width: fit-content
+  border-radius: 8px
+  margin-bottom: 0.5rem
+
 
 .Skills-items
   display: flex
   flex-direction: column
   gap: 0.5rem
-
+  padding: 0.5rem
+  color: black
 
 .Skills-item
-  color: black
+  display: flex
+  flex-direction: row
+  gap: 1rem
+  padding: 0.5rem
+
+.Skill-item-title
+  color: white
+  padding:0.5rem 0.8rem
+  background-color: rgb(83, 52, 131, 0.9)
+  width: fit-content
+  border-radius: 8px
