--- a/src/styles/components/Academic.styl
+++ b/src/styles/components/Academic.styl
@@ -3,10 +3,39 @@
   display: flex
   flex-direction: column
   justify-content: left
-  padding: 1.5em
+  padding: 1rem
+  margin-left:1rem
+  flex-wrap: wrap
+  border-radius: 8px
+  background-color: rgba(238, 238, 238,0.5)
   
 
 .Academic-items
   display: flex
   flex-direction: column
-  gap: 0.5rem
+  gap: 1rem
+  padding: 0.5rem 
+
+.Academic-title
+  color: white
+  padding:0.5rem 0.8rem
+  background-color: rgb(15, 52, 96, 0.9)
+  width: fit-content
+  border-radius: 8px
+  margin-bottom: 0.5rem
+
+.Academic-item
+  padding: 0.5rem
+  display: flex
+  flex-direction: column
+  color: black
+  background-color: white
+  border-radius: 8px
+  box-shadow: 2px 2px 5px 0px rgba(22, 33, 62,0.5);
+
+.Academic-item-title
+  color: white
+  padding:0.5rem 0.8rem
+  background-color: rgb(83, 52, 131, 0.9)
+  width: fit-content
+  border-radius: 8px
