--- a/src/styles/components/App.styl
+++ b/src/styles/components/App.styl
@@ -9,6 +9,7 @@ body
 
   color: black
   font-family: Roboto
+  font-size: 1rem
 
 .general-container
   display:flex
@@ -19,7 +20,11 @@ body
 
 .app-item
   display: flex
+  margin:0rem
   
+  
+  
+
 
 
 
