--- a/src/styles/components/Experience.styl
+++ b/src/styles/components/Experience.styl
@@ -4,12 +4,41 @@
   flex-direction: column
   justify-content: left
   padding: 1.5rem
+  margin:1rem
+  background-color: rgba(238, 238, 238,0.5)
+  border-radius: 8px
+  
+  
 
 .Experience-item
   flex:1
  
-
+.Experience-title
+  color: white
+  padding:0.5rem 0.8rem
+  background-color: rgb(15, 52, 96, 0.9)
+  width: fit-content
+  border-radius: 8px
+  margin-bottom: 0.5rem
 
 .Experience-items
    display: flex
    padding: 0.5rem
+   gap: 1rem
+
+.Experience-item
+  padding: 1rem
+  display: flex
+  flex-direction: column
+  color: black
+  background-color: white
+  border-radius: 8px
+  box-shadow: 2px 2px 5px 0px rgba(22, 33, 62,0.5);
+  
+.Experience-item-title
+  color: white
+  padding:0.5rem 0.8rem
+  background-color: rgb(83, 52, 131, 0.9)
+  width: fit-content
+  border-radius: 8px
+  margin-bottom:0.2rem
