--- a/src/styles/components/Languages.styl
+++ b/src/styles/components/Languages.styl
@@ -4,8 +4,34 @@
   flex-direction: column
   justify-content: left
   padding: 1.5rem
+  margin:1rem
+  border-radius: 8px
+  background-color: rgba(238, 238, 238,0.5)
   
 .Languages-items
   display: flex
   flex-direction: row
-  justify-content: space-between
+  flex-wrap: wrap
+  padding: 0.5rem
+  gap: 0.5rem
+
+
+.Languages-title
+  color: white
+  padding:0.5rem 0.8rem
+  background-color: rgb(15, 52, 96, 0.9)
+  width: fit-content
+  border-radius: 8px
+
+.Languages-item
+  display: flex
+  flex-direction: row
+  gap: 1rem
+  
+
+.Language-item-title
+  color: white
+  padding:0.5rem 0.8rem
+  background-color: rgb(83, 52, 131, 0.9)
+  width: fit-content
+  border-radius: 8px
