--- a/src/styles/components/Academic.styl
+++ b/src/styles/components/Academic.styl
@@ -3,11 +3,13 @@
   display: flex
   flex-direction: column
   justify-content: left
-  padding: 1rem
-  margin-left:1rem
+  padding: 2rem
+  margin-left: 2rem 
+  margin-top: 1rem 
   flex-wrap: wrap
   border-radius: 8px
   background-color: rgba(238, 238, 238,0.5)
+  box-shadow: 2px 2px 5px 0px rgba(22, 33, 62,0.7);
   
 
 .Academic-items
