--- a/src/styles/components/Experience.styl
+++ b/src/styles/components/Experience.styl
@@ -3,15 +3,13 @@
   flex-wrap: wrap
   flex-direction: column
   justify-content: left
-  padding: 1.5rem
-  margin:1rem
+  padding: 2rem
+  margin:1rem 2rem 2rem 2rem
   background-color: rgba(238, 238, 238,0.5)
   border-radius: 8px
+  box-shadow: 2px 2px 5px 0px rgba(22, 33, 62,0.7);
   
   
-
-.Experience-item
-  flex:1
  
 .Experience-title
   color: white
@@ -31,9 +29,8 @@
   display: flex
   flex-direction: column
   color: black
-  background-color: white
-  border-radius: 8px
-  box-shadow: 2px 2px 5px 0px rgba(22, 33, 62,0.5);
+  flex: 1
+ 
   
 .Experience-item-title
   color: white
