--- a/src/styles/components/Interest.styl
+++ b/src/styles/components/Interest.styl
@@ -3,11 +3,11 @@
   display: flex
   flex-direction: column
   justify-content: left
-  padding: 1.5rem
-  margin-left:1rem
-  margin-top:1rem
+  padding: 2rem
+  margin: 2rem
   border-radius: 8px
   background-color: rgba(238, 238, 238,0.5)
+  box-shadow: 2px 2px 5px 0px rgba(22, 33, 62,0.7);
 
 .Interest-items
   display: flex
