--- a/src/styles/components/Languages.styl
+++ b/src/styles/components/Languages.styl
@@ -3,10 +3,11 @@
   display: flex
   flex-direction: column
   justify-content: left
-  padding: 1.5rem
-  margin:1rem
+  padding: 2rem
+  margin: 2rem 2rem 2rem 0rem 
   border-radius: 8px
   background-color: rgba(238, 238, 238,0.5)
+  box-shadow: 2px 2px 5px 0px rgba(22, 33, 62,0.7);
   
 .Languages-items
   display: flex
@@ -22,6 +23,7 @@
   background-color: rgb(15, 52, 96, 0.9)
   width: fit-content
   border-radius: 8px
+  margin-bottom: 0.5rem
 
 .Languages-item
   display: flex
