--- a/src/styles/components/Profile.styl
+++ b/src/styles/components/Profile.styl
@@ -1,9 +1,9 @@
 .Profile-container
-  padding: 1.5rem
-  margin:1rem
+  padding: 2rem
+  margin:2rem
   background-color: rgba(238, 238, 238,0.5)
   border-radius: 8px
-  
+  box-shadow: 2px 2px 5px 0px rgba(22, 33, 62,0.7);
 
 .Profile-desc
   color: black
