--- a/src/styles/components/Skills.styl
+++ b/src/styles/components/Skills.styl
@@ -3,13 +3,15 @@
   display: flex
   flex-direction: column
   justify-content: left
-  padding: 1rem
-  margin-left:1rem
-  margin-right:1rem
+  padding: 2rem
+  margin-top: 1rem
+  margin-left:2rem
+  margin-right:2rem
   flex-wrap: wrap
   background-color: white
   border-radius: 8px
   background-color: rgba(238, 238, 238,0.5)
+  box-shadow: 2px 2px 5px 0px rgba(22, 33, 62,0.7);
   
 
 
